syntax = "proto3";
option java_package = "si.thoughts.texts";

service Comments {
    rpc commentCleanUp(CleanUpRequest) returns (CleanUpResponse) {};
}

message CleanUpRequest {
    int32 id = 1;
}

message CleanUpResponse {
    int32 status = 1;
}